third_party/move/move-compiler-v2/tests/more-v1/expansion/invalid_unpack_assign_mdot_no_struct.exp

Diagnostics:
error: invalid assignment
  ┌─ tests/more-v1/expansion/invalid_unpack_assign_mdot_no_struct.move:4:9
  │
4 │         Self::f() = 0;
  │         ^^^^^^^^^ Invalid assignment syntax. Expected: a local, a field write, or a deconstructing assignment
